--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,9 +1,9 @@
-$background-color: #F4F6F7;
+$background-color: #f2f2f2;
 $font-family: Helvetica,Arial,sans-serif;
 $primary-text-color: #0F2B43;
 $secondary-text-color: #375167;
-$accent-color: #1FBA97;
-$grey: #999999;
+$accent-color: #239548;
+$grey: #666;
 $red: #c33;
 $link-color: #07c;
 $margin: 20px;
@@ -43,10 +43,11 @@ $fw: 600;
   		padding: 8px 16px;
 		font-weight: 600;
 		text-decoration: none;
-		border-radius: 0;
+		border-radius: 3px;
 		border:$accent-color solid 2px;
-		color: darken( $accent-color, 10% );
-		background:none;
+		color: #fff !important;
+		background-color:$accent-color;
+		outline:none !important;
   	}
 
 	hr {
@@ -64,21 +65,28 @@ $fw: 600;
 		border:none;
 		.navbar-text {
 			margin:0 15px;
-			line-height: 49px;
+			line-height: 50px;
 		}
 		.navbar-text,
 		.navbar-brand {
 			color:#fff;
 		}
-		a {
-			color: $grey;
-			text-decoration: none;
+		span.badge {
+			@include font-size(14px);
+			padding:0;
+			.totalItems {
+				@include font-size(13px);
+				color: darken($accent-color, 20%);
+			}
 		}
-		small a {
-			font-size: 0.75rem;
+		span.badge.active {
+			background-color:$accent-color;
 		}
-		small a:hover {
-			color:white;
+		button {
+			padding:6px 12px;
+			border:none;
+			background: none;
+			outline: none !important;
 		}
 	}
 
@@ -115,6 +123,108 @@ $fw: 600;
 			margin-top: $margin;
 			margin-bottom: $margin/3;
 			text-align: center;
+		}
+	}
+
+/* Modal 
+-------------------------*/
+	#modal {
+		#cover {
+			position:fixed;
+		    top:0;
+		    left:0;
+		    background:rgba(0,0,0,0.6);
+		    z-index:5;
+		    width:100%;
+		    height:100%;
+		}
+		#modalContent {
+			position: fixed;
+		    top: 80px;
+		    z-index: 6;
+		    left: 0;
+		    right: 0;
+		    width: 80%;
+		    margin: 0 auto;
+		    max-width: 500px;
+
+		    .panel-default {
+		    	border:none;
+		    	border-radius: 0;
+
+			    .panel-heading {
+			    	background-color:$accent-color;
+			    	border-radius:0;
+			    	border:none;
+			    	color: #fff;
+			    	padding:15px;
+			    	font-weight: $fw;
+
+			    	button {
+				    	background:none;
+				    	border:none;
+				    	color:#fff;
+				    }
+			    }
+
+			    .panel-body {
+			    	padding:0;
+
+			    	.empty {
+			    		margin:0;
+			    		padding:30px 15px;
+			    		text-align: center;
+			    		font-weight: $fw;
+			    	}
+
+			    	.media {
+			    		padding:15px;
+			    		margin:0;
+			    		border-bottom:#eee solid 1px;
+
+			    		.media-heading {
+			    			margin: 0;
+						    @include font-size(15px);
+						    line-height: 1.2;
+						    font-weight: $fw;
+			    		}
+			    		img {
+					    	width:50px;
+					    }
+					    span.title {
+					    	@include font-size(18px);
+					    	color: $primary-text-color;
+					    	display: block;
+					    	font-weight: $fw;
+					    }
+					    span.quantity {
+					    	color:$grey;
+					    	@include font-size(14px);
+					    }
+					    span.price {
+					    	@include font-size(14px);
+					    	font-weight: $fw;
+					    }
+			    	}
+			    }
+
+			    .panel-footer {
+			    	border:none;
+			    	background-color:#eee;
+			    	color:darken($secondary-text-color, 20%);
+			    	border-radius:0;
+			    	padding:15px;
+			    	font-weight: $fw;
+			    	box-shadow: 0 8px 6px -6px #444;
+
+			    	span.badge {
+			    		background: none;
+			    		@include font-size(18px);
+			    		color:darken($secondary-text-color, 20%);
+			    		padding:0;
+			    	}
+			    }
+			}
 		}
 	}
 
