--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,11 +5,16 @@
         		House of Kaizen
       		</a>
 	    	<span class="navbar-text pull-right">
-	    		<span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-	    		<small>
-	    			<span class="username">Cart {{total | currency:'£'}}</span>
-	    			<a href="#/">({{items.length;}})</a>
-	    		</small>
+				<span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+				<span class="badge" data-ng-class="{active: totalItems}">
+					<button data-ng-click="showModal(true)">
+						<span class="totalPrice">{{totalPrice | currency:'£'}}</span>
+						<span class="totalItems" data-ng-show="totalItems">
+							({{totalItems}}
+							<ng-pluralize count="totalItems" when="{'0': 'items', '1': 'item', 'other': 'items'}"></ng-pluralize>)
+						</span>
+					</button>
+				</span>
 	    	</span>
 	    </div>
   	</div>
@@ -17,7 +22,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-8 col-md-offset-2">
-			<h1>Catalogue</h1>
+			<h1>Kaizen Catalogue</h1>
 			<div class="row">
 				<div class="col-md-12">
 					<article class="well animated slideInDown" data-ng-repeat="product in products">
@@ -44,8 +49,40 @@
 </div>
 
 <!-- Modal -->
-<div data-ng-repeat="item in items track by $index">
-	{{item.title}}
+<div id="modal" data-ng-show="modal">
+	<div id="cover" class="animated fadeIn"></div>
+	<div id="modalContent" class="animated slideInDown">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+				Cart Summary
+				<button data-ng-click="showModal(false)" class="pull-right">
+					<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+				</button>
+			</div>
+			<div class="panel-body">
+				<p class="empty" data-ng-show="!totalItems">Empty Cart!</p>
+				<div class="media" data-ng-repeat="item in cartItems track by $index">
+					<div class="media-left">
+					  	<img class="media-object" data-ng-src="{{item.product.image_url}}" alt="{{item.product.title}}">
+					</div>
+					<div class="media-body">
+						<h4 class="media-heading">{{item.product.title}}</h4>
+						<span class="quantity">Quantity: {{item.total}} @ {{item.product.price | currency:'£'}} each</span>
+					</div>
+					<div class="media-right">
+						<span class="price">
+							{{item.total*item.product.price | currency:'£'}}
+						</span>
+					</div>
+				</div>
+			</div>
+			<div class="panel-footer">
+				Total ({{totalItems}}):
+				<span class="badge total pull-right">{{totalPrice | currency:'£'}}</span>
+			</div>
+		</div>
+	</div>
 </div>
 
 
