--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-fixed-top navbar-inverse">
 	<div class="container-fluid">
     	<div class="navbar-inner">
-     		<a class="navbar-brand" href="#/overview/">
+     		<span class="navbar-brand">
         		House of Kaizen
-      		</a>
+      		</span>
 	    	<span class="navbar-text pull-right">
 				<span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
 				<span class="badge" data-ng-class="{active: totalItems}">
