--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -12,54 +12,45 @@ body {
   font-size: 1rem;
   color: #0F2B43; }
 
-a {
-  color: #239548; }
-
-button.btn {
-  padding: 8px 16px;
-  font-weight: 600;
-  text-decoration: none;
-  border-radius: 3px;
-  border: #239548 solid 2px;
-  color: #fff !important;
-  background-color: #239548;
-  outline: none !important; }
-
-hr {
-  border-color: #e5e5e5; }
-
 h1 {
   font-size: 22px;
   font-size: 1.375rem;
   font-weight: 600;
   margin-bottom: 20px; }
 
+button {
+  background: none;
+  border: none;
+  outline: none !important; }
+
+/* Top Navbar 
+-------------------------*/
 .navbar {
   border-radius: 0;
   border: none; }
-  .navbar .navbar-text {
-    margin: 0 15px;
-    line-height: 50px; }
   .navbar .navbar-text,
   .navbar .navbar-brand {
     color: #fff; }
-  .navbar span.badge {
-    font-size: 14px;
-    font-size: 0.875rem;
-    padding: 0; }
-    .navbar span.badge .totalItems {
+  .navbar .navbar-text {
+    margin: 0 15px;
+    line-height: 50px; }
+    .navbar .navbar-text span.glyphicon {
+      margin-right: 5px; }
+    .navbar .navbar-text span.badge {
+      font-size: 14px;
+      font-size: 0.875rem;
+      padding: 0; }
+    .navbar .navbar-text span.badge.active {
+      background-color: #239548; }
+    .navbar .navbar-text span.totalPrice {
       font-size: 13px;
       font-size: 0.8125rem;
-      color: #104220; }
-  .navbar span.badge.active {
-    background-color: #239548; }
-  .navbar button {
-    padding: 6px 12px;
-    border: none;
-    background: none;
-    outline: none !important; }
+      color: #222; }
+    .navbar .navbar-text button {
+      padding: 6px 12px;
+      outline: none !important; }
 
-/* Overview 
+/* Catalogue List 
 -------------------------*/
 .well {
   background-color: #fff;
@@ -82,6 +73,17 @@ h1 {
     font-size: 0.875rem;
     color: #375167;
     line-height: 1.7; }
+  .well button {
+    padding: 10px 16px;
+    font-weight: 600;
+    text-decoration: none;
+    border-radius: 3px;
+    color: #fff !important;
+    background-color: #239548; }
+  .well button:hover {
+    background-color: #1e803e; }
+  .well button:active {
+    background-color: #196c34; }
   .well span.price {
     display: block;
     font-weight: 600;
@@ -91,7 +93,7 @@ h1 {
 
 /* Modal 
 -------------------------*/
-#modal #cover {
+#overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -99,6 +101,7 @@ h1 {
   z-index: 5;
   width: 100%;
   height: 100%; }
+
 #modal #modalContent {
   position: fixed;
   top: 80px;
@@ -108,67 +111,65 @@ h1 {
   width: 80%;
   margin: 0 auto;
   max-width: 500px; }
-  #modal #modalContent .panel-default {
-    border: none;
-    border-radius: 0; }
-    #modal #modalContent .panel-default .panel-heading {
-      background-color: #239548;
-      border-radius: 0;
-      border: none;
-      color: #fff;
-      padding: 15px;
+#modal .panel-default {
+  border: none;
+  border-radius: 0; }
+#modal .panel-heading {
+  background-color: #239548;
+  border-radius: 0;
+  border: none;
+  color: #fff;
+  padding: 15px;
+  font-weight: 600; }
+  #modal .panel-heading button {
+    color: #fff; }
+#modal .panel-body {
+  padding: 0; }
+  #modal .panel-body .empty {
+    margin: 0;
+    padding: 30px 15px;
+    text-align: center;
+    font-weight: 600; }
+  #modal .panel-body .media {
+    padding: 15px;
+    margin: 0;
+    border-bottom: #eee solid 1px; }
+    #modal .panel-body .media .media-heading {
+      margin: 0;
+      font-size: 15px;
+      font-size: 0.9375rem;
+      line-height: 1.2;
       font-weight: 600; }
-      #modal #modalContent .panel-default .panel-heading button {
-        background: none;
-        border: none;
-        color: #fff; }
-    #modal #modalContent .panel-default .panel-body {
-      padding: 0; }
-      #modal #modalContent .panel-default .panel-body .empty {
-        margin: 0;
-        padding: 30px 15px;
-        text-align: center;
-        font-weight: 600; }
-      #modal #modalContent .panel-default .panel-body .media {
-        padding: 15px;
-        margin: 0;
-        border-bottom: #eee solid 1px; }
-        #modal #modalContent .panel-default .panel-body .media .media-heading {
-          margin: 0;
-          font-size: 15px;
-          font-size: 0.9375rem;
-          line-height: 1.2;
-          font-weight: 600; }
-        #modal #modalContent .panel-default .panel-body .media img {
-          width: 50px; }
-        #modal #modalContent .panel-default .panel-body .media span.title {
-          font-size: 18px;
-          font-size: 1.125rem;
-          color: #0F2B43;
-          display: block;
-          font-weight: 600; }
-        #modal #modalContent .panel-default .panel-body .media span.quantity {
-          color: #666;
-          font-size: 14px;
-          font-size: 0.875rem; }
-        #modal #modalContent .panel-default .panel-body .media span.price {
-          font-size: 14px;
-          font-size: 0.875rem;
-          font-weight: 600; }
-    #modal #modalContent .panel-default .panel-footer {
-      border: none;
-      background-color: #eee;
-      color: #131d25;
-      border-radius: 0;
-      padding: 15px;
-      font-weight: 600;
-      box-shadow: 0 8px 6px -6px #444; }
-      #modal #modalContent .panel-default .panel-footer span.badge {
-        background: none;
-        font-size: 18px;
-        font-size: 1.125rem;
-        color: #131d25;
-        padding: 0; }
+    #modal .panel-body .media img {
+      width: 50px; }
+    #modal .panel-body .media span.title {
+      font-size: 18px;
+      font-size: 1.125rem;
+      color: #0F2B43;
+      display: block;
+      font-weight: 600; }
+    #modal .panel-body .media span.quantity {
+      color: #666;
+      font-size: 14px;
+      font-size: 0.875rem; }
+    #modal .panel-body .media span.price {
+      font-size: 14px;
+      font-size: 0.875rem;
+      font-weight: 600; }
+#modal .panel-footer {
+  border: none;
+  background-color: #eee;
+  color: #131d25;
+  border-radius: 0;
+  padding: 15px;
+  font-weight: 600;
+  box-shadow: 0 8px 6px -6px #444; }
+  #modal .panel-footer span.badge {
+    background: none;
+    font-size: 18px;
+    font-size: 1.125rem;
+    color: #131d25;
+    padding: 0; }
 
 @media (max-width: 768px) {
   .container-fluid {
