--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,8 +4,6 @@ $primary-text-color: #0F2B43;
 $secondary-text-color: #375167;
 $accent-color: #239548;
 $grey: #666;
-$red: #c33;
-$link-color: #07c;
 $margin: 20px;
 $fw: 600;
 
@@ -14,7 +12,6 @@ $fw: 600;
   	$remSize: $size / 16px;
   	@return $remSize * 1rem;
 }
-
 @mixin font-size($size) {
   	font-size: $size;
   	font-size: calculateRem($size);
@@ -34,63 +31,52 @@ $fw: 600;
 		@include font-size(16px);
 		color: $primary-text-color;
 	}
-
-	a {
-		color:$accent-color;
-	}
-
-	button.btn {
-  		padding: 8px 16px;
-		font-weight: 600;
-		text-decoration: none;
-		border-radius: 3px;
-		border:$accent-color solid 2px;
-		color: #fff !important;
-		background-color:$accent-color;
-		outline:none !important;
-  	}
-
-	hr {
-		border-color:darken( $background-color, 5% );
-	}
-
 	h1 {
 		@include font-size(22px);
 		font-weight: $fw;
 		margin-bottom: $margin;
 	}
+	button {
+		background:none;
+		border:none;
+		outline:none !important;
+	}
+
+/* Top Navbar 
+-------------------------*/
 
 	.navbar {
 		border-radius:0;
 		border:none;
-		.navbar-text {
-			margin:0 15px;
-			line-height: 50px;
-		}
 		.navbar-text,
 		.navbar-brand {
 			color:#fff;
 		}
-		span.badge {
-			@include font-size(14px);
-			padding:0;
-			.totalItems {
-				@include font-size(13px);
-				color: darken($accent-color, 20%);
+		.navbar-text {
+			margin:0 15px;
+			line-height: 50px;
+			span.glyphicon {
+				margin-right: 5px;
 			}
-		}
-		span.badge.active {
-			background-color:$accent-color;
-		}
-		button {
-			padding:6px 12px;
-			border:none;
-			background: none;
-			outline: none !important;
+			span.badge {
+				@include font-size(14px);
+				padding:0;
+			}
+			span.badge.active {
+				background-color:$accent-color;
+			}
+			span.totalPrice {
+				@include font-size(13px);
+				color: #222;
+			}
+			button {
+				padding:6px 12px;
+				outline: none !important;
+			}
 		}
 	}
 
-/* Overview 
+/* Catalogue List 
 -------------------------*/
 	.well {
 		background-color:#fff;
@@ -99,24 +85,35 @@ $fw: 600;
 		box-shadow: 0 6px 5px -8px #333;
 		border-radius:0;
 		margin-bottom: 15px;
-
 		img.media-object {
 			margin-left: -19px;
 			width: 120px;
 		}
-
 		h4 {
 			@include font-size(18px);
 			font-weight: $fw;
 			margin-top: $margin;
 			line-height: 1.4;
 		}
-
 		p {
 			@include font-size(14px);
 			color: $secondary-text-color;
 			line-height: 1.7;
 		}
+		button {
+	  		padding: 10px 16px;
+			font-weight: 600;
+			text-decoration: none;
+			border-radius: 3px;
+			color: #fff !important;
+			background-color:$accent-color;
+	  	}
+	  	button:hover {
+	  		background-color:darken($accent-color,5%);
+	  	}
+	  	button:active {
+	  		background-color:darken($accent-color,10%);
+	  	}
 		span.price {
 			display: block;
 			font-weight: $fw;
@@ -128,16 +125,16 @@ $fw: 600;
 
 /* Modal 
 -------------------------*/
+	#overlay {
+		position:fixed;
+	    top:0;
+	    left:0;
+	    background:rgba(0,0,0,0.6);
+	    z-index:5;
+	    width:100%;
+	    height:100%;
+	}
 	#modal {
-		#cover {
-			position:fixed;
-		    top:0;
-		    left:0;
-		    background:rgba(0,0,0,0.6);
-		    z-index:5;
-		    width:100%;
-		    height:100%;
-		}
 		#modalContent {
 			position: fixed;
 		    top: 80px;
@@ -147,85 +144,75 @@ $fw: 600;
 		    width: 80%;
 		    margin: 0 auto;
 		    max-width: 500px;
-
-		    .panel-default {
-		    	border:none;
-		    	border-radius: 0;
-
-			    .panel-heading {
-			    	background-color:$accent-color;
-			    	border-radius:0;
-			    	border:none;
-			    	color: #fff;
-			    	padding:15px;
-			    	font-weight: $fw;
-
-			    	button {
-				    	background:none;
-				    	border:none;
-				    	color:#fff;
-				    }
-			    }
-
-			    .panel-body {
-			    	padding:0;
-
-			    	.empty {
-			    		margin:0;
-			    		padding:30px 15px;
-			    		text-align: center;
-			    		font-weight: $fw;
-			    	}
-
-			    	.media {
-			    		padding:15px;
-			    		margin:0;
-			    		border-bottom:#eee solid 1px;
-
-			    		.media-heading {
-			    			margin: 0;
-						    @include font-size(15px);
-						    line-height: 1.2;
-						    font-weight: $fw;
-			    		}
-			    		img {
-					    	width:50px;
-					    }
-					    span.title {
-					    	@include font-size(18px);
-					    	color: $primary-text-color;
-					    	display: block;
-					    	font-weight: $fw;
-					    }
-					    span.quantity {
-					    	color:$grey;
-					    	@include font-size(14px);
-					    }
-					    span.price {
-					    	@include font-size(14px);
-					    	font-weight: $fw;
-					    }
-			    	}
-			    }
-
-			    .panel-footer {
-			    	border:none;
-			    	background-color:#eee;
-			    	color:darken($secondary-text-color, 20%);
-			    	border-radius:0;
-			    	padding:15px;
-			    	font-weight: $fw;
-			    	box-shadow: 0 8px 6px -6px #444;
-
-			    	span.badge {
-			    		background: none;
-			    		@include font-size(18px);
-			    		color:darken($secondary-text-color, 20%);
-			    		padding:0;
-			    	}
-			    }
-			}
 		}
+	    .panel-default {
+	    	border:none;
+	    	border-radius: 0;
+	    }
+	    .panel-heading {
+	    	background-color:$accent-color;
+	    	border-radius:0;
+	    	border:none;
+	    	color: #fff;
+	    	padding:15px;
+	    	font-weight: $fw;
+	    	button {
+		    	color:#fff;
+		    }
+	    }
+	    .panel-body {
+	    	padding:0;
+	    	.empty {
+	    		margin:0;
+	    		padding:30px 15px;
+	    		text-align: center;
+	    		font-weight: $fw;
+	    	}
+	    	.media {
+	    		padding:15px;
+	    		margin:0;
+	    		border-bottom:#eee solid 1px;
+	    		.media-heading {
+	    			margin: 0;
+				    @include font-size(15px);
+				    line-height: 1.2;
+				    font-weight: $fw;
+	    		}
+	    		img {
+			    	width:50px;
+			    }
+			    span.title {
+			    	@include font-size(18px);
+			    	color: $primary-text-color;
+			    	display: block;
+			    	font-weight: $fw;
+			    }
+			    span.quantity {
+			    	color:$grey;
+			    	@include font-size(14px);
+			    }
+			    span.price {
+			    	@include font-size(14px);
+			    	font-weight: $fw;
+			    }
+	    	}
+	    }
+	    .panel-footer {
+	    	border:none;
+	    	background-color:#eee;
+	    	color:darken($secondary-text-color, 20%);
+	    	border-radius:0;
+	    	padding:15px;
+	    	font-weight: $fw;
+	    	box-shadow: 0 8px 6px -6px #444;
+
+	    	span.badge {
+	    		background: none;
+	    		@include font-size(18px);
+	    		color:darken($secondary-text-color, 20%);
+	    		padding:0;
+	    	}
+	    }
 	}
 
 @media (max-width: 768px) {
