--- a/app/views/main.html
+++ b/app/views/main.html
@@ -8,7 +8,6 @@
 				<span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
 				<span class="badge" data-ng-class="{active: totalItems}">
 					<button data-ng-click="showModal(true)">
-						Cart:
 						<span class="totalItems">
 							{{totalItems}}
 							<ng-pluralize count="totalItems" when="{'0': 'items', '1': 'item', 'other': 'items'}"></ng-pluralize>
@@ -32,18 +31,18 @@
 				<div class="col-md-12">
 					<article class="well animated slideInUp" data-ng-repeat="product in products">
 						<div class="media">
-							<div class="media-left">
-							  	<img class="media-object" data-ng-src="{{product.image_url}}" alt="{{product.title}}">
-							</div>
 							<div class="media-body">
+								<div class="pull-left product-image">
+								  	<img class="media-object" data-ng-src="{{product.image_url}}" alt="{{product.title}}">
+								</div>
+								<div class="pull-right product-price">
+									<span class="price">
+										{{product.price | currency:'£'}}
+									</span>
+									<button class="btn primary" data-ng-click="addToCart($index, product)">Add to Cart</button>
+								</div>
 								<h4 class="media-heading">{{product.title}}</h4>
 								<p>{{product.description}}</p>
-							</div>
-							<div class="media-right">
-								<span class="price">
-									{{product.price | currency:'£'}}
-								</span>
-								<button class="btn primary" data-ng-click="addToCart($index, product)">Add to Cart</button>
 							</div>
 						</div>
 					</article>
