--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -59,9 +59,6 @@ button {
   box-shadow: 0 6px 5px -8px #333;
   border-radius: 0;
   margin-bottom: 15px; }
-  .well img.media-object {
-    margin-left: -19px;
-    width: 120px; }
   .well h4 {
     font-size: 18px;
     font-size: 1.125rem;
@@ -73,23 +70,30 @@ button {
     font-size: 0.875rem;
     color: #375167;
     line-height: 1.7; }
-  .well button {
-    padding: 10px 16px;
-    font-weight: 600;
-    text-decoration: none;
-    border-radius: 3px;
-    color: #fff !important;
-    background-color: #239548; }
-  .well button:hover {
-    background-color: #1e803e; }
-  .well button:active {
-    background-color: #196c34; }
-  .well span.price {
-    display: block;
-    font-weight: 600;
-    margin-top: 20px;
-    margin-bottom: 6.66667px;
-    text-align: center; }
+  .well .product-image {
+    margin-right: 10px; }
+    .well .product-image img.media-object {
+      margin-left: -19px;
+      width: 120px; }
+  .well .product-price {
+    margin-left: 10px; }
+    .well .product-price button {
+      padding: 10px 16px;
+      font-weight: 600;
+      text-decoration: none;
+      border-radius: 3px;
+      color: #fff !important;
+      background-color: #239548; }
+    .well .product-price button:hover {
+      background-color: #1e803e; }
+    .well .product-price button:active {
+      background-color: #196c34; }
+    .well .product-price span.price {
+      display: block;
+      font-weight: 600;
+      margin-top: 20px;
+      margin-bottom: 6.66667px;
+      text-align: center; }
 
 /* Modal 
 -------------------------*/
@@ -104,7 +108,9 @@ button {
 
 #modal #modalContent {
   position: fixed;
+  overflow: auto;
   top: 80px;
+  bottom: 40px;
   z-index: 6;
   left: 0;
   right: 0;
@@ -173,6 +179,13 @@ button {
 
 @media (max-width: 768px) {
   .container-fluid {
-    padding: 0; } }
+    padding: 0; }
+
+  .well h4 {
+    margin-top: 0; }
+
+  .well img {
+    width: 50px !important;
+    margin: 0 !important; } }
 
 /*# sourceMappingURL=main.css.map */
