--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -85,10 +85,6 @@ $fw: 600;
 		box-shadow: 0 6px 5px -8px #333;
 		border-radius:0;
 		margin-bottom: 15px;
-		img.media-object {
-			margin-left: -19px;
-			width: 120px;
-		}
 		h4 {
 			@include font-size(18px);
 			font-weight: $fw;
@@ -100,26 +96,36 @@ $fw: 600;
 			color: $secondary-text-color;
 			line-height: 1.7;
 		}
-		button {
-	  		padding: 10px 16px;
-			font-weight: 600;
-			text-decoration: none;
-			border-radius: 3px;
-			color: #fff !important;
-			background-color:$accent-color;
-	  	}
-	  	button:hover {
-	  		background-color:darken($accent-color,5%);
-	  	}
-	  	button:active {
-	  		background-color:darken($accent-color,10%);
-	  	}
-		span.price {
-			display: block;
-			font-weight: $fw;
-			margin-top: $margin;
-			margin-bottom: $margin/3;
-			text-align: center;
+		.product-image {
+			margin-right: $margin/2;
+			img.media-object {
+				margin-left: -19px;
+				width: 120px;
+			}
+		}
+		.product-price {
+			margin-left: $margin/2;
+			button {
+		  		padding: 10px 16px;
+				font-weight: 600;
+				text-decoration: none;
+				border-radius: 3px;
+				color: #fff !important;
+				background-color:$accent-color;
+		  	}
+		  	button:hover {
+		  		background-color:darken($accent-color,5%);
+		  	}
+		  	button:active {
+		  		background-color:darken($accent-color,10%);
+		  	}
+			span.price {
+				display: block;
+				font-weight: $fw;
+				margin-top: $margin;
+				margin-bottom: $margin/3;
+				text-align: center;
+			}
 		}
 	}
 
@@ -137,7 +143,9 @@ $fw: 600;
 	#modal {
 		#modalContent {
 			position: fixed;
+			overflow: auto;
 		    top: 80px;
+		    bottom:40px;
 		    z-index: 6;
 		    left: 0;
 		    right: 0;
@@ -218,5 +226,12 @@ $fw: 600;
 @media (max-width: 768px) {
 	.container-fluid {
 		padding:0;
+	}
+	.well h4 {
+		margin-top: 0;
+	}
+	.well img {
+		width: 50px !important;
+		margin:0 !important;
 	}
 }
