--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -2,8 +2,7 @@
 -------------------------*/
 html,
 body {
-  padding: 0;
-  padding-top: 30px;
+  padding: 30px 0 10px 0;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   font-family: Helvetica, Arial, sans-serif;
@@ -58,7 +57,7 @@ button {
   border-bottom: none;
   box-shadow: 0 6px 5px -8px #333;
   border-radius: 0;
-  margin-bottom: 15px; }
+  margin-bottom: 0; }
   .well h4 {
     font-size: 18px;
     font-size: 1.125rem;
