--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -22,8 +22,7 @@ $fw: 600;
 -------------------------*/
 	html,
 	body {
-		padding: 0;
-		padding-top: 30px;
+		padding: 30px 0 10px 0;
 		margin: 0;
 		-webkit-font-smoothing: antialiased;
 		font-family: $font-family;
@@ -84,7 +83,7 @@ $fw: 600;
 		border-bottom:none;
 		box-shadow: 0 6px 5px -8px #333;
 		border-radius:0;
-		margin-bottom: 15px;
+		margin-bottom: 0;
 		h4 {
 			@include font-size(18px);
 			font-weight: $fw;
