--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -83,7 +83,7 @@ $fw: 600;
 		border-bottom:none;
 		box-shadow: 0 6px 5px -8px #333;
 		border-radius:0;
-		margin-bottom: 0;
+		margin-bottom: 10px;
 		h4 {
 			@include font-size(18px);
 			font-weight: $fw;
